files synced to latest codes.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
 <!-- <img src="assets/images/logo.png" alt="Logo"> -->
-<img class= "logo-hero" src="assets/images/AcctAbility_transparent.png" width="135rem" height="100%" alt="Logo">
+<img class= "logo-hero" src="assets/images/AcctAbility_transparent.png" width="200px" height="100%" alt="Logo">
 </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="toggler-icon"></span>
@@ -99,8 +99,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="header-hero-content">
-                            <h1 class="hero-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"><b>Your</b> <span>Accounting</span> and Compliance partner for <b>Growth.</b></h1>
-                            <p class="text wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s" style="color: rgb(255, 255, 255);">At AcctAbility, we are committed to providing you with specialized and seamless accounting solutions, that empower you to concentrate on your core strengths. With our specialized data analyses services, we can together unlock the full potential of your financial data and drive your business forward.</p>
+                            <h1 class="hero-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"><b><br><br>Your</b> <span>Accounting</span> and Compliance partner for <b>Growth.</b></h1>                            <p class="text wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s" style="color: rgb(255, 255, 255);">At AcctAbility, we are committed to providing you with specialized and seamless accounting solutions, that empower you to concentrate on your core strengths. With our specialized data analyses services, we can together unlock the full potential of your financial data and drive your business forward.</p>
                             <br><a href="#contact"><button class="main-btn" style="background-color: rgb(255, 255, 255);">Contact Us</button></a>
                             <!-- <div class="header-singup wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                                 <input type="text" placeholder="username@yourdomain.com">
@@ -279,7 +278,13 @@
                                     <div class="col-lg-6">
                                         <div class="our-services-content mt-45">
                                             <h3 class="services-title">Data Analysis and Management Information  <span>Reports empowering you to take right decisions at the right time</span></h3>
-                                            <p class="text">We offer to provide you our data analysis services, where we transform your accounting data into an excel based interactive Management Reporting Dashboard, helping you identify the key trends and comparisons, in-turn resulting in better decisions making and faster business growth.</p>
+                                            <p class="text">AcctAbility provides fast and reliable services in relation to the legal incorporation of
+                                                your investment in India. This important legal process, when combined with our
+                                                professional planning, provides your business with a superior and integrated corporate
+                                                establishment process under one roof.<br>
+                                                As one of the leading Indian Brands for registering foreign-owned businesses, we are
+                                                well equipped to advise companies on the best way to structure their business entities
+                                                to meet their goals and maximize operational efficiency.</p>
                                             <div class="our-services-progress d-flex align-items-center mt-55">
                                                 <div class="circle" id="circles-2"></div>
                                                 <div class="progress-content">
@@ -659,9 +664,9 @@
                             <li></li>
                             <li></li>
                         </ul>
-                        <p class="text">At AcctAbility, our commitment to excellence goes beyond the services we provide it's reflected in the experiences and successes of our clients. We take pride in building strong, collaborative partnerships that drive tangible results. Don't just take our word for it; hear what our clients have to say about their journey with AcctAbility Services.
+                        <p class="text">At AcctAbility, our commitment to excellence goes beyond the services we provide it's reflected in the experiences and successes of our clients. We take pride in building strong, collaborative partnerships that drive tangible results. Don't just take our word for it; hear what our clients have to say about their journey with AcctAbility.
 
-                            <br> <br>These testimonials highlight the impact of our dedicated team, innovative solutions, and unwavering commitment to client success. Discover why businesses trust AcctAbility Services for exceptional service and transformative outcomes.</p>
+                            <br> <br>These testimonials highlight the impact of our dedicated team, innovative solutions, and unwavering commitment to client success. Discover why businesses trust AcctAbility for exceptional service and transformative outcomes.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -671,7 +676,7 @@
                         <div class="testimonial-content-wrapper testimonial-active">
                             <div class="single-testimonial">
                                 <div class="testimonial-text">
-                                    <p class="text">“Working with AcctAbility has been a game-changer for our business. Their team's dedication to excellence and innovative solutions have significantly boosted our productivity.”
+                                    <p class="text">“Working with AcctAbility has been a game-changer for our business. Their team's dedication to excellence and innovative solutions have significantly boosted our productivity.""
 
                                         </p>
                                 </div>
@@ -757,7 +762,7 @@
     </section>
 
 
-    <div id="brand" class="brand-area">
+    <div id="brand" class="brand-area" style="padding-top: 0%;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -945,7 +950,7 @@
                             <!-- <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus</p> -->
                         </div>
                     </div>
-                    <p class="text" style="color: white;">Part of a 10+ yeas old professional consultancy firm in India, AcctAbility  is an esteemed Accounting and Compliance Outsourcing entity headquartered in Greater Noida (India), providing comprehensive services to elite CA/CPA firms, Onshore Accounting Outsourcing providers and Independent Business Entities worldwide, with a focus on quality, cost-effectiveness, and turnaround time.</p>
+                    <p class="text" style="color: white;">Part of a 10+ years old professional consultancy firm in India, AcctAbility  is an esteemed Accounting and Compliance Outsourcing entity headquartered in Greater Noida (India), providing comprehensive services to elite CA/CPA firms, Onshore Accounting Outsourcing providers and Independent Business Entities worldwide, with a focus on quality, cost-effectiveness, and turnaround time.</p>
 
                     <div class="col-lg-3 col-sm-6 order-sm-3 order-lg-2">
                         <div class="footer-link pt-40">
@@ -953,10 +958,10 @@
                                 <h5 class="title">Services</h5>
                             </div>
                             <ul>
-                                <li><a href="#">Accounting Services</a></li>
-                                <li><a href="#">Data Analysis and MIS</a></li>
-                                <li><a href="#">Payroll Management Services</a></li>
-                                <li><a href="#">Corporate Establishment and Structuring in India</a></li>
+                                <li><a href="#services">Accounting Services</a></li>
+                                <li><a href="#services">Data Analysis and MIS</a></li>
+                                <li><a href="#services">Payroll Management Services</a></li>
+                                <li><a href="#services">Corporate Establishment and Structuring in India</a></li>
                             </ul>
                         </div>
                     </div>
@@ -967,9 +972,9 @@
                             </div>
                             <ul>
                                 <li><a href="#">Overview</a></li>
-                                <li><a href="#">Why us</a></li>
+                                <li><a href="#service">Why us</a></li>
                                 <!-- <li><a href="#">Awards & Recognitions</a></li> -->
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="#contact">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
