--- a/index.html
+++ b/index.html
@@ -857,8 +857,7 @@
     </section> -->
 
 
-    <section id="contact" class="contact-area pt-120 pb-120">
-        <div class="container">
+    <section id="contact" class="contact-area pt-120 pb-120">        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-4">
                     <div class="section-title text-center pb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
