--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                                     <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/acctabilityindia/"><i class="fa-brands fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
