--- a/index.html
+++ b/index.html
@@ -998,8 +998,8 @@
                                 <p class="text" style="color: white;">+91 9111900007</p>
                                 <ul class="social mt-40">
                                     <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                    <li><a href="https://twitter.com/acctabilityin"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="https://www.instagram.com/acctability.in/"><i class="fa-brands fa-instagram"></i></a></li>
                                     <li><a href="https://www.linkedin.com/company/acctabilityindia/"><i class="fa-brands fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
