--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                                     <li class="nav-item">
                                         <a href="index.html/#services">Services</a>
                                     </li>
+
+                                    
                                     <!-- <li class="nav-item">
                                         <a href="index.html/#portfolio">Portfolio</a>
                                     </li> -->
@@ -83,6 +85,10 @@
                                     </li> -->
                                     <li class="nav-item">
                                         <a href="index.html/#contact">Contact</a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a href="data-protection.html">Data Protection</a>
                                     </li>
                                 </ul>
                             </div>
