--- a/index.html
+++ b/index.html
@@ -86,10 +86,14 @@
                                     <li class="nav-item">
                                         <a href="index.html/#contact">Contact</a>
                                     </li>
-
+                                    
                                     <li class="nav-item">
-                                        <a href="data-protection.html">Data Protection</a>
+                                        <a href="index.html/#data-protection">Data Protection</a>
                                     </li>
+                                    
+                                    <!-- <li class="nav-item">
+                                        <a href="data-protection.html">Data Protection</a>
+                                    </li> -->
                                 </ul>
                             </div>
                             <!-- <div class="navbar-btn d-none d-sm-inline-block">
@@ -653,6 +657,37 @@
             </div>
         </div>
     </section> -->
+
+
+<!-- data protection section -->
+<div id="data-protection" class="data-protection bg_cover d-lg-flex align-items-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7">
+                <div class="header-hero-content data-protection-content">
+                    <h1 class="hero-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"><b><br><br>Robust </b> <span>Data Protection</span> for <b>Confidentiality and Integrity.</b></h1>
+                    <p class="text wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s" style="color: rgb(255, 255, 255);">In the digital age, robust data protection is essential for upholding confidentiality and integrity. Through encryption, access controls, and regular audits, organizations fortify defenses against cyber threats. Strict access controls and employee training ensure confidentiality, while checksums and backups maintain data integrity, safeguarding valuable information in today's technological landscape.</p>
+                    <br><a href="data-protection.html"><button class="main-btn" style="background-color: rgb(255, 255, 255);">Know more</button></a>
+                    <!-- <div class="header-singup wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
+                        <input type="text" placeholder="username@yourdomain.com">
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="data-protection-image d-flex align-items-center wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="1.1s">
+        <div class="image">
+            <!-- <img src="assets/images/hero-image.png" alt="Hero Image"> -->
+            <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+            <dotlottie-player src="https://lottie.host/66eb5134-0ce2-41ae-b5d0-5c5bd94a4a41/oRzkfDZny2.json"
+                background="transparent" speed="1" style="width: 500px; height: 500px;" loop autoplay></dotlottie-player>
+        </div>
+    </div>
+</div>
+
+
+
+
 
 
     <section id="testimonial" class="testimonial-area pt-70 pb-120">
