--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
 
 
 <!-- data protection section -->
-<div id="data-protection" class="data-protection bg_cover d-lg-flex align-items-center">
+<div id="data-protection" class="header-hero bg_cover d-lg-flex align-items-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-7">
@@ -675,12 +675,12 @@
             </div>
         </div>
     </div>
-    <div class="data-protection-image d-flex align-items-center wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="1.1s">
+    <div class="header-hero-image d-flex align-items-center wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="1.1s">
         <div class="image">
-            <!-- <img src="assets/images/hero-image.png" alt="Hero Image"> -->
+            <!-- <img src="assets/images/data-protection.png" alt="Hero Image"> -->
             <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
             <dotlottie-player src="https://lottie.host/66eb5134-0ce2-41ae-b5d0-5c5bd94a4a41/oRzkfDZny2.json"
-                background="transparent" speed="1" style="width: 500px; height: 500px;" loop autoplay></dotlottie-player>
+                background="transparent" speed="1" loop autoplay></dotlottie-player>
         </div>
     </div>
 </div>
