--- a/data-protection.html
+++ b/data-protection.html
@@ -398,6 +398,22 @@
 
     <style>
 
+.spacefromtop{
+ margin-top: 12%; 
+}
+
+@media only screen and (max-width: 576px) {
+  .spacefromtop{
+ margin-top: 35%; 
+}
+}
+
+@media only screen and (min-width: 600px) and (max-width: 1076px) {
+  .spacefromtop{
+ margin-top: 25%; 
+}
+}
+
 .services-bg {
       position: relative;
       height: 100vh;
@@ -1412,7 +1428,7 @@
       </header> -->
 
 
-<!-- 
+
       <header class="header-area">
         <div class="navbar-area headroom">
             <div class="container">
@@ -1459,7 +1475,7 @@
             </div>
         </div>
       
-    </header> -->
+    </header>
 
 
       <!-- End of Header  -->
@@ -1479,7 +1495,7 @@
       <!-- End of Sub Header -->
 
       <section class="data-security grey-bg">
-        <div class="container">
+        <div class="container spacefromtop">
           <div class="col-50 ">
             <!-- <img
               src="https://storage.googleapis.com/jupitice-website/images/indianmuneem/website/gif/general-security.gif"
